--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@ repositories {
 }
 
 dependencies {
+    compile 'commons-cli:commons-cli:1.4'
+    compile 'jline:jline:2.14.3'
     testCompile 'junit:junit:4.12'
     testCompile 'org.hamcrest:hamcrest-junit:2.0.0.0'
     testCompile 'com.h2database:h2:1.4.191'
