--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ dependencies {
     testCompile 'com.h2database:h2:1.4.191'
 }
 
-version = '5.0.0-beta1'
+version = '5.0.0-beta2-SNAPSHOT'
 
 sourceCompatibility = '1.7'
 targetCompatibility = '1.7'
