Replace the existing code in XmlImporter and XmlExporter with the newly written code that are written using APIs in Java core class libraries , and add joda-time to dependencies for tests

--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     testCompile 'org.hamcrest:hamcrest-junit:2.0.0.0'
     testCompile 'com.h2database:h2:1.4.191'
+    testCompile 'joda-time:joda-time:2.9.9'
 }
 
 version = '5.0.0-beta2'
