--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     compile 'commons-cli:commons-cli:1.4'
     compile 'jline:jline:2.14.3'
 	compile 'org.apache.commons:commons-csv:1.4'
+	compile 'com.yuvimasory:orange-extensions:1.3.0'
     testCompile 'junit:junit:4.12'
     testCompile 'org.hamcrest:hamcrest-junit:2.0.0.0'
     testCompile 'com.h2database:h2:1.4.191'
