--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ dependencies {
     testCompile 'joda-time:joda-time:2.9.9'
 }
 
-version = '5.0.0-RC1'
+version = '5.0.0'
 
 sourceCompatibility = '1.7'
 targetCompatibility = '1.7'
